# hitl.quest

./: claude.md  package.json
agent/: pyproject.toml
agent/src/: agent.py
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/aerial-yoga-insurance/: page.tsx
app/api/copilotkit/: route.ts
app/api/zep/: route.ts
app/articles/: page.tsx
app/articles/aerial-yoga-insurance-explained/: page.tsx
app/articles/best-yoga-insurance-providers-2026/: page.tsx
app/articles/hot-yoga-insurance-coverage/: page.tsx
app/balens-yoga-teacher-insurance/: page.tsx
app/best-yoga-teacher-insurance-providers/: page.tsx
app/best-yoga-teacher-insurance-uk/: page.tsx
app/class-3-mobility-scooter-insurance/: page.tsx
app/compare-mobility-scooter-insurance/: page.tsx
app/compare-yoga-teacher-insurance-uk/: page.tsx
app/contact/: page.tsx
app/do-you-need-mobility-scooter-insurance/: page.tsx
app/do-you-need-yoga-teacher-insurance/: page.tsx
app/fitness-instructor-insurance-uk/: page.tsx
app/group-fitness-instructor-insurance/: page.tsx
app/how-much-yoga-teacher-insurance-cost/: page.tsx
app/mobility-scooter-breakdown-cover/: page.tsx
app/pilates-instructor-insurance/: page.tsx
app/privacy/: page.tsx
app/profile/: page.tsx
app/terms/: page.tsx
app/trainee-yoga-teacher-insurance/: page.tsx
app/yoga-alliance-insurance-uk/: page.tsx
components/: AerialYogaCalculator.tsx  DebugPanel.tsx  Disclaimer.tsx  Footer.tsx  HeroVoice.tsx  Navigation.tsx  providers.tsx
public/: site.webmanifest
(+5 files in other folders)
